# routes/index.js
@@ -1,15 +1,17 @@
-
 const router = require('express').Router();
+const passport = require('passport');
 
 router.use('/', require('./swagger'));
-
-router.get('/', (req, res) => {
-    //#swagger.tags=['Hello World']
-    res.send('Hello World');
-})
-
 router.use('/members', require('./members'));
-
 router.use('/templevisits', require('./templeVisits'));
+
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+
+router.get('/logout', function(req, res, next) {
+    req.logout(function(err) {
+        if (err) { return next(err); }
+        res.redirect('/');
+    });
+});
 
 module.exports = router;
